# nvidia-tuner

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  constants.rs  main.rs  nvml.rs  utils.rs
